--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "tailwind.config.js"
+    "tailwind.config.js",
+    "src/components/Footer"
   ],
   "exclude": ["node_modules"]
 }
