--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "nodemon index.js",
+    "install": "module"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.11.0",
+    "mongoose": "^8.12.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "stripe": "^17.7.0",
